07/22/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.5.1.2 'Shivers':
	- cosmetic changes

07/21/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.5.1.1 'Shivers':
	- Improved "split" network engine:
	two different threading models for TCP and UDP.
	- DTLS crash fixed.
	- Multuthreading with Cygwin.
	
Version 2.5.1.1 'Shivers':
	- Improved "split" network engine:
	two different threading models for TCP and UDP.
	- DTLS crash fixed.
	- Multuthreading with Cygwin.
	
07/20/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.1.3.1 'Shivers':
	- DTLS improvements for DOS attacks
	- deeper optimization for DOS attack (mostly for Linux)
	
07/19/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.1.2.0 'Shivers':
	- deeper optimization for DOS attack (mostly for Linux)

07/18/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Po-sheng Lin <personlin118@gmail.com> 
Version 2.1.1.1 'Shivers':
	- udp fixes.
	- Makefile cleaning.
	- Dependencies cleaning.
	- DOS attack client emulation.
	- DOS attack defense logic added to the server.

07/14/2013 Oleg Moskalenko <mom040267@gmail.com> 
Version 2.0.0.0 'Shivers':
	- new networking engine:
		- scalable UDP socket model. 
		- multithreaded TCP relay implemented.
		- race condition fixed in authentication of TCP sessions.
		- Cygwin "port" fixed. 

06/23/2013 Oleg Moskalenko <mom040267@gmail.com>,
			Vladimir Tsanev <tsachev@gmail.com> 
Version 1.8.7.0 'Black Dow':

	- Added support for obsolete "classic" STUN RFC 3489;
	- Full TURN support for Cygwin implemented: MS-Win UDP sockets fixed;
	- Relay threads number changed;
	- Fedora warnings fixed;
	- turndb/testdbsetup.sh example file added;
	- Multiple Makefile and ./configure script fixes implemented:
		* Changes taken from Arch Linux port;
		* Manpages installation and deinstallation;
		* rfc5769check utility removed from installation, it is used for the 
		compilation result test only and makes no sense for the end user;