@@ -1,5 +1,5 @@
-.\"Text automatically generated by txt2man
-.TH TURN 1 "21 July 2013" "" ""
+.\" Text automatically generated by txt2man
+.TH TURN 1 "23 July 2013" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -487,8 +487,7 @@ will be the address of the alternate server for UDP & TCP service in form of
 ALTERNATE\-SERVER, with error 300, on ALLOCATE request, to the client.
 Client will receive only values with the same address family
 as the client network endpoint address family. 
-This functionality can be used only with authentication mode. See RFC 5389 and
-RFC 5766 for ALTERNATE\-SERVER functionality description. 
+See RFC 5389 and RFC 5766 for ALTERNATE\-SERVER functionality description. 
 The client must use the obtained value for subsequent TURN communications.
 If more than one \fB\-\-alternate\-server\fP \fIoptions\fP are provided, then the functionality
 can be more accurately described as "load\-balancing" than a mere "redirection". 
